구글트렌드탭 - 레이아웃 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
 
     <!-- 설정 -->
     <string name="tab_title_setting">Settings</string>
+    <string name="thumbnail">thumbnail</string>
 
 </resources>
